# dlna-browser

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml  release.yml
packaging/: installer.nsi  postinst.sh
resources/: DlnaBrowser.desktop  DlnaBrowser.icns  DlnaBrowser.rc.in  resources.qrc
src/: addressbar.cpp  addressbar.h  contentview.cpp  contentview.h  dlnaclient.cpp  dlnaclient.h  dlnadiscovery.cpp  dlnadiscovery.h  dlnamodel.cpp  dlnamodel.h  dlnaparser.cpp  dlnaparser.h  faicon.cpp  faicon.h  favoritespanel.cpp  favoritespanel.h  imagewidget.cpp  imagewidget.h  infowidget.cpp  infowidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mediaviewer.cpp  mediaviewer.h  mediawidget.cpp  mediawidget.h  videowidget.cpp  videowidget.h
src/browser/: aboutdialog.cpp  aboutdialog.h  addressbar.cpp  addressbar.h  contentview.cpp  contentview.h  dlnaicons.h  dlnamodel.cpp  dlnamodel.h  favoritespanel.cpp  favoritespanel.h  mainwindow.cpp  mainwindow.h
src/dlna/: dlnaclient.cpp  dlnaclient.h  dlnadiscovery.cpp  dlnadiscovery.h  dlnaitem.h  dlnaparser.cpp  dlnaparser.h  dlnautils.cpp  dlnautils.h
src/mediaviewer/: autohideoverlay.cpp  autohideoverlay.h  imagewidget.cpp  imagewidget.h  infowidget.cpp  infowidget.h  mediaviewer.cpp  mediaviewer.h  mediawidget.cpp  videowidget.cpp  videowidget.h
src/ui/: faicon.cpp  faicon.h
tests/: CMakeLists.txt  test_dlnamodel.cpp  test_dlnamodel.h  test_dlnaparser.cpp  test_dlnaparser.h
